# sycl-sandbox

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.github/workflows/: merge-and-delete.yml
cmake/: fetch_deps.cmake
conan/adaptivecpp/: conandata.yml  conanfile.py
conan/adaptivecpp/patches/: llvm22-pass-plugin.patch
docs/: architecture.md  coding-guidelines.md  raytracing.md
include/: sandbox_api.h
include/alloc/: allocator.h  arena_allocator.h  buffer.h  device_allocator.h  host_allocator.h  linear_allocator.h  root_allocator.h  stack_allocator.h  tag.h  transfer.h  vector.h
include/containers/: buffer.h  vector.h
include/rt/: camera.h  helpers.h  math.h  params.h  scene.h  trace.h  types.h  types_fwd.h  variant.h
include/rt/hittables/: box.h  quad.h  sphere.h  triangle.h
include/rt/materials/: dielectric.h  diffuse_light.h  lambertian.h  metal.h
include/sycl-sandbox/: optional.h  param_types.h  profiling.h  sandbox_api.h  variant.h
include/sycl-sandbox/alloc/: allocator.h  arena_allocator.h  buffer.h  device_allocator.h  host_allocator.h  linear_allocator.h  root_allocator.h  stack_allocator.h  transfer.h
include/sycl-sandbox/containers/: buffer.h  vector.h
include/sycl-sandbox/rt/: camera.h  helpers.h  math.h  params.h  scene.h  trace.h  types.h  types_fwd.h  variant.h
include/sycl-sandbox/rt/hittables/: box.h  quad.h  sphere.h  triangle.h
include/sycl-sandbox/rt/materials/: dielectric.h  diffuse_light.h  lambertian.h  metal.h
kernels/: CMakeLists.txt
kernels/cornell_box/: kernel.cpp
kernels/mandelbrot/: kernel.cpp
kernels/one_weekend/: kernel.cpp  kernel.h
profiler/: CMakeLists.txt
profiles/: gcc
scenes/: cornell_box.yaml  mandelbrot.yaml  one_weekend_final.yaml
src/: CMakeLists.txt  kernel_library.cpp  kernel_library.h  main.cpp  param_ui.cpp  param_ui.h  scene_registry.cpp  scene_registry.h  watcher.cpp  watcher.h
